Block 2: create services/controllers and configured liquibase script

--- a/block2/src/main/resources/application.properties
+++ b/block2/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.error.include-message=always
+
+# liquibase
+spring.liquibase.default-schema=public
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.drop-first=false
