--- a/block2/src/main/resources/application.properties
+++ b/block2/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=block2
+spring.application.name=service-songs
 
 # database credentials
 spring.datasource.username=${DB_USERNAME}
@@ -16,3 +16,14 @@ server.error.include-message=always
 spring.liquibase.default-schema=public
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.drop-first=false
+
+# discovery
+spring.config.import=optional:consul:/
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.service-name=service-songs
+spring.cloud.consul.discovery.health-check-path=/health
+
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=*
