--- a/block2/docker-compose.yml
+++ b/block2/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       DB_USERNAME: ${DB_USERNAME}
     depends_on:
       - postgres
+    networks:
+      - testnet
   postgres:
     image: postgres:latest
     env_file:
@@ -24,3 +26,9 @@ services:
       POSTGRES_DB: jacksong
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+    networks:
+      - testnet
+
+networks:
+  testnet:
+    external: true
